--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -6,8 +6,8 @@ jobs:
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
-      - name: Check out code
-        uses: actions/checkout@master
+      - name: Git Checkout
+        uses: actions/checkout@v2
         with:
           fetch-depth: '0'
 
