--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -5,6 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      GITHUB_RUN_NUMBER: ${{ secrets.GITHUB_RUN_NUMBER }}
     steps:
       - name: Git Checkout
         uses: actions/checkout@v2
@@ -22,23 +23,30 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
 
-      - name: Generate tag
-        id: tag_version
-        uses: rymndhng/release-on-push-action@master
-        with:
-          bump_version_scheme: minor
-          tag_prefix:
-
-      - name: Check Output git tag
-        run: |
-          echo "Got tag name ${{ steps.tag_version.outputs.tag_name }}"
-
       - name: Build, tag, and push image to Amazon ECR
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: portal-comercios
-          IMAGE_TAG: ${{ steps.tag_version.outputs.tag_name }}
+          IMAGE_TAG: 1.${{ secrets.GITHUB_RUN_NUMBER }}.0
         run: |
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+
+      - name: Set Version
+        id: version
+        run: |
+          echo "::set-output name=value::$( pwsh ./version-tool.ps1 next-version )"
+
+      - name: Create a tag
+        id: tag
+        uses: ./
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          message: ${{ github.ref }} merged and created ${{ steps.version.outputs.value }}
+          tag: ${{ steps.version.outputs.value }}
+
+      - name: Show Ref
+        run: |
+          echo "Created version ${{ steps.tag.outputs.ref }}"
+          echo "secrets.GITHUB_RUN_NUMBER ${{ secrets.GITHUB_RUN_NUMBER }}"
 
