--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Set Version
         id: version
         run: |
-          echo "::set-output name=value::$( pwsh ./version-tool.ps1 next-version )"
+          echo "::set-output name=value::$( pwsh ../version-tool.ps1 next-dev-version )"
 
       - name: Create a tag
         id: tag
