--- a/.github/workflows/aws-single.yml
+++ b/.github/workflows/aws-single.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Create a tag
         id: tag
         run: |
-          echo "Creating tag from git workflow RUN_NUMBER:${{ env.GITHUB_RUN_NUMBER }} RUN_ID: ${{ env.GITHUB_RUN_NUMBER }}"
+          echo "Creating tag from git workflow 1.${{ secrets.GITHUB_RUN_NUMBER }}.0 - RUN_NUMBER:${{ env.GITHUB_RUN_NUMBER }} RUN_ID: ${{ env.GITHUB_RUN_NUMBER }}"
           git tag -a 1.0.1 -f -m "Create tag from git workflow RUN_NUMBER:${{ secrets.GITHUB_RUN_NUMBER }} RUN_ID: ${{ secrets.GITHUB_RUN_ID }}"
           git push --tags
 
