--- a/.github/workflows/aws-single.yml
+++ b/.github/workflows/aws-single.yml
@@ -5,7 +5,9 @@ jobs:
     runs-on: ubuntu-latest
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      GITHUB_RUN_NUMBER: ${{ secrets.GITHUB_RUN_NUMBER }}
+      GITHUB_RUN_NUMBER: ${{ github.run_number }}
+      GITHUB_RUN_ID: ${{ github.run_id }}
+      TAG: 1.${{ github.run_number }}.0
     steps:
       - name: Git Checkout
         uses: actions/checkout@v2
@@ -26,7 +28,7 @@ jobs:
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: portal-comercios
-          IMAGE_TAG: 1.${{ secrets.GITHUB_RUN_NUMBER }}.0
+          IMAGE_TAG: ${{ env.TAG }}
         run: |
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
@@ -34,7 +36,9 @@ jobs:
       - name: Create a tag
         id: tag
         run: |
-          echo "Creating tag from git workflow 1.${{ secrets.GITHUB_RUN_NUMBER }}.0 - RUN_NUMBER:${{ env.GITHUB_RUN_NUMBER }} RUN_ID: ${{ env.GITHUB_RUN_NUMBER }}"
-          git tag -a 1.0.1 -f -m "Create tag from git workflow RUN_NUMBER:${{ secrets.GITHUB_RUN_NUMBER }} RUN_ID: ${{ secrets.GITHUB_RUN_ID }}"
+          git config --global user.name "ygonzalez1"
+          git config --global user.email "ygonzalez.work@gmail.com"
+          echo "Creating tag from git workflow - RUN_NUMBER:${{ env.GITHUB_RUN_NUMBER }} RUN_ID: ${{ env.GITHUB_RUN_NUMBER }}"
+          git tag -a ${{ env.TAG }} -f -m "Create tag from git workflow RUN_NUMBER:${{ secrets.GITHUB_RUN_NUMBER }} RUN_ID: ${{ secrets.GITHUB_RUN_ID }}"
           git push --tags
 
