--- a/.github/workflows/aws-fix.yml
+++ b/.github/workflows/aws-fix.yml
@@ -15,11 +15,11 @@ jobs:
         run: |
           git config --global user.name "ygonzalez1"
           git config --global user.email "ygonzalez.work@gmail.com"
-          echo ::set-output name=new_tag::$(git tag --column --sort -tag | awk '{print $1}' | awk '{split($0,a,"."); print a[1]"."a[2]"."a[3]+1}')
+          echo ::set-env name=NEW_TAG::$(git tag --column --sort -tag | awk '{print $1}' | awk '{split($0,a,"."); print a[1]"."a[2]"."a[3]+1}')
 
       - name: Create Git Tag
         id: tag
         run: |
-          echo "${{ steps.version.outputs.new_tag }}"
+          echo "${{ steps.version.outputs.NEW_TAG }}"
           
 
